tutorial/egress/destination-rule-recomm.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: recommendation
    namespace: tutorial
spec:
    host: recommendation
    subsets:
        - name: version-v1
          labels:
            version: v1
        - name: version-v2
          labels:
            version: v2
        - name: version-v3
          labels:
            version: v3
