tutorial/egress/service-entry.yml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: recommendation
  namespace: tutorial
spec:
  hosts:
  #- now.httpbin.org
  - httpbin.org
  ports:
  - name: http-80
    number: 80
    protocol: http
